5_3 kyverno/restrict-image-registries.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-image-registries
spec:
  validationFailureAction: enforce
  rules:
  - name: validate-registries
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Only images from approved registries are allowed"
      pattern:
        spec:
          containers:
          - name: "*"
            image: "nginx* | mcr.microsoft.com/*"
